# buddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: __init__.py  backups.py  config.py  crypto.py  db.py  main.py  models.py  schemas.py  security.py  services.py  two_factor.py  utils.py
app/banking/: __init__.py  crypto.py  plaid.py  service.py
app/routes/: __init__.py  admin.py  auth.py  backups.py  banking.py  categories.py  csv.py  expenses.py  frontend.py  reports.py  trackers.py  users.py
frontend/: index.html
frontend/static/: app.js  styles.css
scripts/: import_monthly_expenses_xlsx.py  smoke_test.py
tests/: helpers.py  test_backups.py  test_banking.py  test_csv_helpers.py  test_services.py  test_two_factor_routes.py  test_validation_and_security.py
