[project]
name = "buddy"
version = "0.3.0"
description = "Self-hosted budgeting and expense tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.10,<3",
    "pydantic>=2.8,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[tool.uv]
package = false
