[project]
name = "buddy"
version = "0.6.0"
description = "Self-hosted budgeting and expense tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42,<47",
    "httpx>=0.28,<1",
    "litestar>=2.10,<3",
    "pydantic>=2.8,<3",
    "segno>=1.6,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.30,<1",
]

[tool.uv]
package = false
